--- a/assets/scss/_giang.scss
+++ b/assets/scss/_giang.scss
@@ -59,8 +59,6 @@ $breakpoints: (
 .nguyen-thi-huong {
     background-color: #f1b5b8;
 
-    
-
     .container-left {
         background-color: #ffffff;
         flex-basis: 50%;
@@ -70,14 +68,14 @@ $breakpoints: (
         box-shadow: 20px 20px 10px 2px rgba(0, 0, 0, 0.5);
         border-radius: 8px;
 
-        @include respond-to('smallphone-and-down') {
+        @include respond-to('phone-and-down') {
             top: 0px;
             left: 0px;
          }
     }
 
     .wrapper-inner {
-        @include respond-to('smallphone-and-down') {
+        @include respond-to('phone-and-down') {
             flex-direction: column;
          }
     }
@@ -102,10 +100,18 @@ $breakpoints: (
         
         h4 {
             margin-bottom: 20px;
+
+            @media #{$xs} {
+                margin-bottom: 5px;
+            }
         }
 
         p {
             padding: 0 35px;
+
+            @media #{$xs} {
+                padding: 0 20px;
+            }
         }
     }
 
@@ -150,7 +156,7 @@ $breakpoints: (
         @include respond-to('smallphone-and-down') {
             flex-direction: column;
             width: auto;
-            margin: 0 10px;
+            margin: 10px;
          }
     }
 
@@ -184,10 +190,18 @@ $breakpoints: (
         
         h4 {
             margin-bottom: 20px;
+
+            @media #{$xs} {
+                margin-bottom: 5px;
+            }
         }
 
         p {
             padding: 0 35px;
+
+            @media #{$xs} {
+                padding: 0 15px;
+            }
         }
     }
 
@@ -358,6 +372,9 @@ $breakpoints: (
 
     .info {
         margin: 30px;
+        @media #{$xs} {
+            margin: 10px;
+        }
         text-align: center;
 
         h4 {
@@ -392,6 +409,10 @@ $breakpoints: (
 
         h4 {
             margin-bottom: 20px;
+
+            @media #{$xs} {
+                margin-bottom: 10px;
+            }
         }
     }
 
