--- a/assets/scss/_beautiful.scss
+++ b/assets/scss/_beautiful.scss
@@ -18,6 +18,10 @@
   padding: 5rem 0;
   & .women-right {
     padding: 2rem;
+
+    @media #{$xs} {
+      padding: 10px;
+    }
     background: $white;
     border-radius: 1rem;
     @include box-shadow(0px 0px 8px 5px rgb(182, 171, 171));
@@ -34,6 +38,10 @@
   }
   & .women-center {
     padding: 2rem;
+
+    @media #{$xs} {
+      padding: 0;
+    }
     & img {
       border-radius: 50%;
       width: 300px;
@@ -42,6 +50,10 @@
     }
     & h2 {
       padding: 1rem 0;
+
+      @media #{$xs} {
+        font-size: 27px;
+      }
     }
     & p {
       animation-delay: 0.5s;
@@ -53,6 +65,10 @@
       @include box-shadow(10px 5px 0px 0px rgb(245, 252, 222));
       & p {
         padding: 2rem;
+
+        @media #{$xs} {
+          padding: 10px;
+        }
       }
     }
   }
