--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -26,28 +26,21 @@
 
 .banner {
   position: relative;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
   position: relative;
   overflow: hidden;
-
-  @media #{$xs} {
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  }
   
   &__image {
-    height: 750px;
+    // height: 750px;
     width: 100%;
 
-    @media #{$desktop} {
-      height: 900px;
-    }
-    @media #{$xs} {
-      height: 655px;
-    }
-    @media #{$sm} {
-      height: 550px;
-    }
+    // @media #{$desktop} {
+    //   height: 900px;
+    // }
+    // @media #{$xs} {
+    //   height: 655px;
+    // }
+    // @media #{$sm} {
+    //   height: 550px;
+    // }
   }
 }
